--- a/img/.picasa.ini
+++ b/img/.picasa.ini
@@ -7,8 +7,7 @@ backuphash=37933
 [14.JPG]
 backuphash=20124
 [28.JPG]
-filters=enhance=1;sat=1,0.122807;
-backuphash=62736
+backuphash=63
 [30.JPG]
 backuphash=57643
 [13.JPG]
@@ -20,15 +19,13 @@ backuphash=12295
 [39.JPG]
 backuphash=2497
 [3.JPG]
-backuphash=9537
-filters=unsharp2=1,1.596491;
+backuphash=17902
 [21.JPG]
 backuphash=14284
 [27.JPG]
 backuphash=50714
 [plant.JPG]
-backuphash=63215
-filters=finetune2=1,0.000000,0.000000,0.000000,00000000,0.017544;
+backuphash=53654
 [22.JPG]
 backuphash=49882
 [6.JPG]
@@ -47,3 +44,10 @@ backuphash=27625
 backuphash=10382
 [25.JPG]
 backuphash=36508
+[33.JPG]
+filters=enhance=1;
+backuphash=28728
+redo=finetune2=1,0.000000,0.000000,0.005614,00000000,0.000000;
+[What.JPG]
+backuphash=46468
+redo=crop64=1,1a107e0ff74f236;
