--- a/img/.picasa.ini
+++ b/img/.picasa.ini
@@ -1,53 +1,104 @@
 [2.JPG]
-backuphash=65039
+backuphash=44820
 [24.JPG]
-backuphash=29493
+backuphash=2858
+redo=enhance=1;
 [11.JPG]
-backuphash=37933
+backuphash=9565
 [14.JPG]
-backuphash=20124
+backuphash=24829
 [28.JPG]
-backuphash=63
+backuphash=8738
 [30.JPG]
-backuphash=57643
+backuphash=8801
 [13.JPG]
-backuphash=7214
+backuphash=50390
 [35.JPG]
-backuphash=51113
+backuphash=49672
 [19.JPG]
-backuphash=12295
+backuphash=21689
 [39.JPG]
-backuphash=2497
+backuphash=33152
 [3.JPG]
-backuphash=17902
+backuphash=38864
 [21.JPG]
-backuphash=14284
+backuphash=56025
 [27.JPG]
-backuphash=50714
+backuphash=10931
 [plant.JPG]
-backuphash=53654
+backuphash=50089
 [22.JPG]
 backuphash=49882
 [6.JPG]
-backuphash=43029
+backuphash=59948
+moddate=00486419ffd3d301
 [17.JPG]
 backuphash=6249
 [9.JPG]
-backuphash=20706
+backuphash=43876
 [box1.JPG]
-backuphash=22411
+backuphash=23528
 [plant4.JPG]
-backuphash=45877
+backuphash=26987
 [plant3.JPG]
-backuphash=27625
+backuphash=13131
 [7.JPG]
 backuphash=10382
 [25.JPG]
-backuphash=36508
+backuphash=17890
 [33.JPG]
-filters=enhance=1;
-backuphash=28728
-redo=finetune2=1,0.000000,0.000000,0.005614,00000000,0.000000;
+backuphash=44820
 [What.JPG]
-backuphash=46468
-redo=crop64=1,1a107e0ff74f236;
+backuphash=52011
+[15.JPG]
+backuphash=41297
+[41.jpg]
+backuphash=3170
+redo=enhance=1;
+[36.JPG]
+backuphash=58917
+[8.JPG]
+backuphash=18115
+[plant1.JPG]
+backuphash=38882
+[10.JPG]
+backuphash=36663
+[5.JPG]
+backuphash=18472
+redo=enhance=1;
+[12.JPG]
+backuphash=55412
+[32.JPG]
+backuphash=58917
+[34.JPG]
+backuphash=38208
+[plant2.JPG]
+backuphash=58917
+[47.JPG]
+backuphash=59419
+[box2.JPG]
+backuphash=26351
+[38.JPG]
+backuphash=45363
+[29.JPG]
+backuphash=45867
+[16.JPG]
+backuphash=40121
+[31.JPG]
+backuphash=64746
+[23.JPG]
+backuphash=58985
+[box3.JPG]
+backuphash=53019
+[37.JPG]
+backuphash=22785
+[42.jpg]
+backuphash=22021
+[26.JPG]
+backuphash=10930
+[18.JPG]
+backuphash=37496
+[20.JPG]
+backuphash=50389
+[40.JPG]
+backuphash=61907
